# pircar-system-deps

./: CMakeLists.txt  mpd-deps.sh
mpd/: Makefile.in  aclocal.m4  config.h.in  configure
mpd/doc/: doxygen.conf
ubuntu/: CMakeLists.txt  connectbroadband.sh  connectbroadband1.sh  mpd.conf  rc.local
