project (pirc-pack)
cmake_minimum_required (VERSION 2.8)
 
set(VERSION "1.0.1")

set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_SYSTEM_VERSION 1)

set (INSTALL_DIR "/usr")

add_subdirectory ( ubuntu )

set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "pircar-ubuntu")
set(CPACK_PACKAGE_RELEASE 1)
set(CPACK_PACKAGE_CONTACT "Roman Borisov")
set(CPACK_PACKAGE_VENDOR "rborisov")
set(CPACK_INSTALL_PREFIX "${INSTALL_DIR}")
set(CPACK_PACKAGING_INSTALL_PREFIX "${CPACK_INSTALL_PREFIX}")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
include(CPack)
