cmake_minimum_required(VERSION 2.6)

project (ubuntu-pirc)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/../cmake/")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "2")
set(CPACK_PACKAGE_VERSION_PATCH "2")
set(USERNAME "rborisov")

install(FILES "${PROJECT_SOURCE_DIR}/rc.local" 
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
                GROUP_EXECUTE GROUP_READ
                WORLD_EXECUTE WORLD_READ
    DESTINATION "/etc")
install(FILES "${PROJECT_SOURCE_DIR}/../mpd/src/mpd" 
	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
		    GROUP_EXECUTE GROUP_READ
		    WORLD_EXECUTE WORLD_READ
	DESTINATION bin)
#install(CODE "execute_process(COMMAND sudo chown ${USERNAME} ${PROJECT_SOURCE_DIR}/mpd.conf)")
install(FILES "${PROJECT_SOURCE_DIR}/mpd.conf" DESTINATION "/storage/.mpd")
install(FILES "${PROJECT_SOURCE_DIR}/runmefirst.sh" 
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
                    GROUP_EXECUTE GROUP_READ
                    WORLD_EXECUTE WORLD_READ
	DESTINATION "/home/${USERNAME}/")
install(FILES "${PROJECT_SOURCE_DIR}/connectbroadband.sh" 
	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ 
                    GROUP_EXECUTE GROUP_READ
                    WORLD_EXECUTE WORLD_READ
	DESTINATION bin)
